pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constOuter3.pkl
class Foo {
  const prop = new { value = outer }
}

foo = new Foo {}
